--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "wbhook-ch",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "src/server.js",
   "scripts": {
-    "start": "set NODE_ENV=production&& node server.js",
-    "dev": "set NODE_ENV=development&& nodemon server.js",
+    "start": "set NODE_ENV=production&& node src/server.js",
+    "dev": "set NODE_ENV=development&& nodemon src/server.js",
     "test": "jest"
   },
   "keywords": [
